Add Product Functionalities

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 SMTP_USER=radeeshapraneeth531@gmail.com
 SMTP_PASS=nilbgvvrladdtfzk
+
+VITE_API_URL = http://localhost:80/FM-Backend
+BASE_URL=http://localhost:80/FM-Backend
